--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
 		<a href="RuelCV2025.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
+<!-- 		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
 		<h1 class="mySkills">My Skills</h1><br><br><br>
 <!-- 		  <div class="progress col-md-12 col-sm-12">
     		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -346,12 +346,40 @@
   				<img src="images/laravel.png" title="Laravel">
   			</a>
   			</div>
-	</div>
+	</div> -->
 		
 	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
 		<h1 class="myWorks">My Works</h1>
 		<p>These are the iOS Apps and the Web Development Projects I developed</p> 
 		<br><br><br>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Five Letters App</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift 4)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Five Letters App</strong> is an iOS Game</p>
+						<p>Created using Xcode (Swift 4)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
 		
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
 			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
