--- a/index.html
+++ b/index.html
@@ -202,9 +202,6 @@
 							<a href="#aboutMe">About</a>
 						</li>
 						<li>
-							<a href="#mySkills">My Skills</a>
-						</li>
-						<li>
 							<a href="#myWorks">My Works</a>
 						</li>
 						<li>
@@ -292,89 +289,34 @@
 
 		<a href="RuelCV2025.pdf" target="_blank" class="btn-lg btn btn-info" style="margin-bottom: 30px;">View My Resume</a>	
 	</div>
-/*		<div id="mySkills" class="container-fluid col-md-12 col-sm-12 panel panel-info">
-		<h1 class="mySkills">My Skills</h1><br><br><br>
- 		  <div class="progress col-md-12 col-sm-12">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-    		HTML5 
-    		</div>
-  		</div> -->
-		<div class="progress col-md-12 col-sm-12">
-    		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:65%">
-    		Swift
-    		</div>
-  		</div>
-  		<div class="progress col-md-12 col-sm-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:83%">
-    		CSS3 
-    		</div>
-  		</div>
-
-  		<div class="progress col-md-12 col-sm-12">
-    		<div class="progress-bar progress-bar-striped active progress-bar-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-
-    		mySql
-    		</div>
-  		</div>
-  		<div class="progress col-md-12 col-sm-12">
-
-    		<div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-    		JavaScript
-    		</div>
-  		</div>
-  		<div class="progress col-md-12 col-sm-12">
-
-    		<div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:84%">
-    		PHP 
-    		</div>
-  		</div>
-  			<div class="col-md-12 col-sm-12">
-  				<h3>Frameworks</h3>
-  			</div>
-  			<div class="col-md-4 col-sm-4 framework">
-  			<a href="http://getbootstrap.com/" target="_blank">
-  				<img src="images/bootstrap.png" title="Bootstrap">
-  			</a>
-  			</div>
-  			<div class="col-md-4 col-sm-4 framework">
-  			<a href="https://jquery.com/" target="_blank">
-  				<img src="images/jquery.png" title="jQuery">
-  			</a>
-  			</div>
-  			<div class="col-md-4 col-sm-4 framework">
-  			<a href="https://laravel.com/" target="_blank">
-  				<img src="images/laravel.png" title="Laravel">
-  			</a>
-  			</div>
-	</div> */
-		
+	
 	<div id="myWorks" class="col-md-12 col-sm-12 panel panel-primary">
 		<h1 class="myWorks">My Works</h1>
 		<p>These are the iOS Apps and the Web Development Projects I developed</p> 
 		<br><br><br>
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
+			<a href="https://apps.apple.com/ph/app/autodeal-philippines/id6474729763" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="autodeal.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
-						<p><strong>Five Letters App</strong> is an iOS Game</p>
-						<p>Created using Xcode (Swift 4)</p>
+						<p><strong>AutoDeal Philippines</strong></p>
+						<p>Created using Xcode (SwiftUI)</p>
 					</div>
 				</div>
 			 </a>
 		</div>
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://apps.apple.com/us/app/five-letters-app/id1464205734" target="_blank">
+			<a href="https://apps.apple.com/ph/app/red-planet-hotels/id979816195" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="five.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="redplanet.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
-						<p><strong>Five Letters App</strong> is an iOS Game</p>
+						<p><strong>Red Planet Hotels</strong></p>
 						<p>Created using Xcode (Swift 4)</p>
 					</div>
 				</div>
@@ -513,7 +455,7 @@
 		<!-- <hr style="background-color: white;"> -->
 		<h1 class="contacts">Contact Information</h1><br><br><br>
 		<img src="images/resume.jpg" class="img-circle rotate" style="height: 100px;box-shadow: 0 0 3px white;"><br><br>
-		<p>704 Sta Ana Street, Plainview, Mandaluyong City</p>
+		<p>Mandaluyong City</p>
 		<a href="tel:+639776190040">+63 (977) 619 0040 </a><br>
 		<a href="mailto:lafuenter03@gmail.com">lafuenter03@gmail.com</a><br><br>
 		<a href="https://www.facebook.com/LafuenteR" target="_blank">
