--- a/index.html
+++ b/index.html
@@ -296,20 +296,6 @@
 		<br><br><br>
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
-			<a href="https://apps.apple.com/ph/app/autodeal-philippines/id6474729763" target="_blank">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<img src="autodeal.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
-					</div>
-					<div class="panel-footer">
-						<p><strong>AutoDeal Philippines</strong></p>
-						<p>Created using Xcode (SwiftUI)</p>
-					</div>
-				</div>
-			 </a>
-		</div>
-
-		<div class="col-md-6 col-sm-6 col-xs-6 work">
 			<a href="https://apps.apple.com/ph/app/red-planet-hotels/id979816195" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
@@ -323,13 +309,25 @@
 			 </a>
 		</div>
 
-		
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/ph/app/autodeal-philippines/id6474729763" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="autodeal.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>AutoDeal Philippines</strong></p>
+						<p>Created using Xcode (SwiftUI)</p>
+					</div>
+				</div>
+			 </a>
+		</div>	
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
 			<a href="https://itunes.apple.com/us/app/crossnumber-game/id1457853042" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="crossnumber2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="crossnumber2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Crossnumber: Math Puzzle Game</strong> is an iOS Game</p>
@@ -343,7 +341,7 @@
 			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<img src="memoraise2025" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+						<img src="memoraise2025.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
 						<p><strong>Memo Raise: Memory Game</strong> is an iOS Game</p>
