--- a/index.html
+++ b/index.html
@@ -338,6 +338,20 @@
 		</div>
 
 		<div class="col-md-6 col-sm-6 col-xs-6 work">
+			<a href="https://apps.apple.com/us/app/staedee-app-for-study/id6738093980" target="_blank">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<img src="staedee1.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
+					</div>
+					<div class="panel-footer">
+						<p><strong>Staedee: App for Studt</strong></p>
+						<p>Created using Xcode (SwiftUI)</p>
+					</div>
+				</div>
+			 </a>
+		</div>
+
+		<div class="col-md-6 col-sm-6 col-xs-6 work">
 			<a href="https://apps.apple.com/us/app/memo-raise-memory-game/id1626138063" target="_blank">
 				<div class="panel panel-default">
 					<div class="panel-body">
