--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 						<img src="staedee1.png" class="thumbnail" style="width:100%;height:200px;object-fit:cover;">
 					</div>
 					<div class="panel-footer">
-						<p><strong>Staedee: App for Studt</strong></p>
+						<p><strong>Staedee: App for Study</strong></p>
 						<p>Created using Xcode (SwiftUI)</p>
 					</div>
 				</div>
